default/objects/success__Achievement_Criteria__c/success__Achievement_Criteria__c.object-meta.xml
<CustomObject>
    <description>Behaviour Criteria define the second level of criteria used by Behaviour Templates. These operate on the fields of the object specified on the Behaviour and allow up to 6 separate field related conditions to be evaluated (all of which must be true for the criteria to be met).</description>
    <label>Behaviour Criteria</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Behaviour Criteria ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behaviour Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>