default/objects/success__Achievement_Criteria__c/fields/success__Achievement__c.field-meta.xml
<CustomField>
    <fullName>success__Achievement__c</fullName>
    <label>Achievement</label>
    <referenceTo>success__Achievement__c</referenceTo>
    <relationshipLabel>Behaviour Criteria</relationshipLabel>
    <relationshipName>Achievement_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>