default/objects/success__Achievement_Criteria__c/fields/success__CloudApps_Id__c.field-meta.xml
<CustomField>
    <fullName>success__CloudApps_Id__c</fullName>
    <externalId>true</externalId>
    <label>Content ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>