default/objects/success__Achievement_Criteria__c/fields/success__Field__c.field-meta.xml
<CustomField>
    <fullName>success__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>