default/objects/success__Achievement_Criteria__c/fields/success__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>success__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>